# trip-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 45246e4025e7_enable_pgvector_extension.py  b19331843678_add_users_and_user_id_links.py  c48a01e88aff_create_core_tables_with_constraints.py  ed61573e26d2_add_message_seq_column.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph.py  llm.py  state.py
backend/app/agents/nodes/: __init__.py  coordinator.py  faq.py  planner.py  recommend.py  supervisor.py  workers.py
backend/app/api/: __init__.py  deps.py  schemas.py
backend/app/core/: __init__.py  circuit_breaker.py  config.py  logging.py
backend/app/data/: activities.json  destinations.json  faq.json  flights.json  hotels.json
backend/app/db/: __init__.py  base.py  models.py
backend/app/providers/: __init__.py  base.py  duffel.py  geoapify.py  intl.py  liteapi.py  photos.py  place.py  registry.py  tour_api.py  weather.py
backend/app/services/: __init__.py  auth_service.py  conversation_service.py  data_loader.py  rag_service.py  travel_service.py  trip_service.py
backend/app/tools/: __init__.py  travel_tools.py
backend/scripts/: measure_latency.py
backend/tests/e2e/: scenarios.py
backend/tests/golden/: cases.py  run.py
backend/tests/unit/: test_circuit_breaker.py  test_planner_gate.py  test_rag_cache.py  test_rag_keyword.py  test_travel_service.py  test_trip_service.py  test_workers_pure.py
(+70 files in other folders)
